feat: configurações para banco de dados postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=blog
-# H2 connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Show SQL on console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.open-in-view=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogsys
+spring.datasource.username=bloguser
+spring.datasource.password=senha123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
