feat: configuração para AUTH0 e flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=blog
 
+spring.flyway.enabled=false
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogsys
 spring.datasource.username=bloguser
 spring.datasource.password=senha123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+
+auth0.issuer=${AUTH0_ISSUER}
+auth0.audience=${AUTH0_AUDIENCE}
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${auth0.issuer}
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when_authorized
